# realsense

./: README.md  pyproject.toml
scripts/: test_multiple.py  test_multiple_recorder.py  test_realsense.py  test_recorder.py
scripts/scripts/: test.json
scripts/scripts/test/: 130322272869.json  218622277783.json  819612070593.json
scripts/test/: 130322272869.json  218622277783.json  819612070593.json
src/realsense/: __init__.py  ffmpeg_recorder.py  multi_realsense.py  single_realsense.py  video_recorder.py
